Handles deprecations in Spring Boot 4.2.0